syntax = "proto3";

package list;

option go_package = "todo-back/infrastructure/handler/grpc/proto_go_gen/list";

message Paging {
    int32 offset = 1;
    int32 limit = 2;
}

enum FilterKind {
    FilterUnknown = 0;
    FilterPartialMatch = 1;
    FilterPerfectMatch = 2;
}

enum SortKind {
    FilterAsc = 0;
    FilterDesc = 1;
}

message SortField {
    SortKind sort_kind = 1;
    int32 priority = 2;
}
